[package]
name = "rustron"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
rustron-lib = { path = "rustron-lib" }
hex = "0.3.2"
midir = "0.5.0"
tui = "0.6.2"
termion = "1.5"
