[package]
name = "rustron-cli"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustron = { path = ".." }
rustron-lib = { path = "../rustron-lib" }
termion = "1.5"
hex = "0.4.0"
tui = "0.6.2"
