[package]
name = "rustron-lib"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
hex = "0.3.2"
strum = "0.16.0"
strum_macros = "0.16.0"
