[package]
name = "rustron-orbtk"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = "0.3.1-alpha3"
log = "0.4.8"
env_logger = "0.7.1"
rustron = { path = ".." }
rustron-lib = { path = "../rustron-lib" }
